# cyberxercise-backend

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260205_0001_initial.py
app/: main.py
app/api/: auth.py  deps.py  join.py  participant.py  router.py  sessions.py
app/core/: security.py  settings.py
app/db/: deps.py  session.py
app/db/models/: __init__.py  exercise_session.py  instructor.py  message.py  participant.py
app/services/: participant_tokens.py  team_id.py
app/ws/: deps.py  manager.py  router.py
docs/: api.md  data-model.md  requirements.md
tests/: conftest.py  test_auth_login.py  test_message_submission.py  test_participant_leave.py  test_ready_and_ws_broadcasts.py  test_session_start_end.py  test_sessions_and_join.py
